# BeingThere

./: CMakeLists.txt  README  README.md  README.txt
beingthere_common/.svn/: all-wcprops  entries
beingthere_common/.svn/text-base/: CMakeLists.txt.svn-base  beingthere_config.h.in.svn-base  beingthere_config.h.svn-base  common.h.svn-base  config.h.svn-base
beingthere_common/shader/.svn/: all-wcprops  entries
beingthere_common/shader/unc/: dummy.vert  light.frag  triangle_fusion.frag
beingthere_gpu/: CMakeLists.txt  common.h  common_kernel.cu
beingthere_gpu/.svn/: all-wcprops  entries
beingthere_io/: CMakeLists.txt  FileSequence.cpp  ImageSequence.h  PlainFileParser.h
beingthere_io/.svn/: all-wcprops  entries
beingthere_io/.svn/text-base/: Filesystem.cpp.svn-base  Filesystem.h.svn-base  ImageSequence.cpp.svn-base  macros.h.svn-base
beingthere_opengl/: CMakeLists.txt  glslprogram.cpp  glslprogram.h  glutils.cpp
beingthere_opengl/.svn/: all-wcprops  entries
beingthere_opengl/.svn/text-base/: ArcBall.cpp.svn-base
beingthere_pcl_cuda/: CMakeLists.txt
beingthere_pcl_cuda/.svn/: all-wcprops  entries
beingthere_pcl_cuda/include/.svn/: all-wcprops  entries
beingthere_pcl_cuda/include/pcl/.svn/: all-wcprops  entries
beingthere_pcl_cuda/include/pcl/cuda/: point_types.h
beingthere_pcl_cuda/include/pcl/cuda/.svn/: all-wcprops  entries
beingthere_pcl_cuda/include/pcl/cuda/.svn/text-base/: point_cloud.h.svn-base  time_gpu.h.svn-base
beingthere_pcl_cuda/include/pcl/cuda/common/: eigen.h
beingthere_pcl_cuda/include/pcl/cuda/common/.svn/: all-wcprops  entries
beingthere_pcl_cuda/include/pcl/cuda/features/.svn/: all-wcprops  entries
beingthere_pcl_cuda/include/pcl/cuda/features/.svn/text-base/: normal_3d.h.svn-base
beingthere_pcl_cuda/include/pcl/cuda/filters/.svn/: all-wcprops  entries
beingthere_pcl_cuda/include/pcl/cuda/io/: cloud_to_pcl.h  disparity_to_cloud.h  extract_indices.h
beingthere_pcl_cuda/include/pcl/cuda/io/.svn/: all-wcprops  entries
beingthere_pcl_cuda/include/pcl/cuda/io/.svn/text-base/: debayering.h.svn-base  host_device.h.svn-base  predicate.h.svn-base
beingthere_pcl_cuda/include/pcl/cuda/sample_consensus/.svn/: all-wcprops  entries
beingthere_pcl_cuda/include/pcl/cuda/sample_consensus/.svn/text-base/: sac_model.h.svn-base
beingthere_pcl_cuda/include/pcl/cuda/segmentation/.svn/: all-wcprops  entries
beingthere_pcl_cuda/src/: cloud_to_pcl.cpp  extract_indices.cu
beingthere_pcl_cuda/src/.svn/: all-wcprops  entries
beingthere_pcl_cuda/src/.svn/text-base/: debayering.cu.svn-base  disparity_to_cloud.cu.svn-base
beingthere_pcl_kinfu/.svn/: all-wcprops  entries
beingthere_pcl_kinfu/.svn/text-base/: CMakeLists.txt.svn-base
beingthere_pcl_kinfu/include/.svn/: all-wcprops  entries
beingthere_pcl_kinfu/src/.svn/: all-wcprops  entries
beingthere_v3d/: CMakeLists.txt
beingthere_v3d/.svn/: all-wcprops  entries
beingthere_v3d/Base/: v3d_serialization.h
beingthere_v3d/Base/.svn/: all-wcprops  entries
beingthere_v3d/GL/: v3d_gpubase.h  v3d_gpuundistort.cpp  v3d_gpuundistort.h
beingthere_v3d/GL/.svn/: all-wcprops  entries
beingthere_v3d/GL/.svn/text-base/: v3d_gpubase.cpp.svn-base  v3d_gpubinarysegmentation.cpp.svn-base  v3d_gpubinarysegmentation.h.svn-base
beingthere_v3d/Geometry/: v3d_cameramatrix.h
beingthere_v3d/Geometry/.svn/: all-wcprops  entries
beingthere_v3d/Math/: v3d_linearbase.h
beingthere_v3d/Math/.svn/: all-wcprops  entries
beingthere_v3d/Math/.svn/text-base/: v3d_linear.h.svn-base
cmake/: FindCG.cmake  MacroOptionalAddSubdirectory.cmake
cmake/.svn/: all-wcprops  entries
cmake/.svn/text-base/: MacroExampleApplication.cmake.svn-base
examples/.svn/: all-wcprops  entries
examples/.svn/text-base/: CMakeLists.txt.svn-base
examples/graphic_interoperation/: book.h  main.cu
examples/graphic_interoperation/.svn/: all-wcprops  entries
examples/kinect_calibration_extrinsic/: kinect_calibration_extrinsic.cpp
examples/kinect_calibration_extrinsic/.svn/: all-wcprops  entries
examples/kinect_calibration_intrinsic/.svn/: all-wcprops  entries
examples/kinect_capture/.svn/: all-wcprops  entries
examples/kinfu_app/.svn/: all-wcprops  entries
examples/multicam_capture/.svn/: all-wcprops  entries
examples/multicam_capture_sdk/: nui_sensor.h
examples/multicam_fusion/: CMakeLists.txt  multicam_fusion.cpp  multicam_fusion.h
examples/multicam_fusion/.svn/: all-wcprops  entries
examples/multicam_fusion/.svn/text-base/: main.cpp.svn-base
examples/opengl_arc_ball/: CMakeLists.txt  opengl_arc_ball.cpp
examples/opengl_cg_segmentation/: CMakeLists.txt  depth_inpainting.cpp  depth_inpainting.h  fgbg_segmentation.cpp  fgbg_segmentation.h
examples/opengl_cg_undistort/: opengl_cg_undistort.cpp
examples/opengl_cg_wave/: opengl_cg_wave.cpp
examples/opengl_ethz_test/: algebra.h  depth_inpainting.cpp  depth_inpainting.h  fgbg_segmentation.cpp  fgbg_segmentation.h  gl_tools.cpp  grid_mesh.cpp  kinectNui.h  kinect_color_camera.h  kinect_depth_camera.h  opengl_ethz_test.cpp
examples/opengl_geometry_cloud/: opengl_geometry_cloud.cpp
examples/opengl_geometry_triangle/: opengl_geometry_triangle.cpp
examples/opengl_pointcloud_renderer/: opengl_pointcloud_renderer.cpp
examples/opengl_shader_mvp/: opengl_shader_mvp.cpp
examples/opengl_texture_buffer_fbo/: gl_texture_buffer_fbo.cpp
examples/opengl_triangle_fusion/: calibration_loader.h  texture_loader.cpp  triangle_fusion.h
examples/opengl_v3d_test/: v3d_common.h  v3d_depth_inpainting.cpp  v3d_segmentation.cpp  v3d_shaders.h
examples/opengl_vbo/: opengl_vbo.cpp
examples/pcl_cloud_fusion/: calibration_loader.cpp  calibration_loader.h  cuda_app.cpp  data_fusion.cpp  data_fusion.h
examples/pose_estimation/: CMakeLists.txt
examples/pose_estimation/.svn/: all-wcprops  entries
examples/pose_estimation/.svn/text-base/: main.cpp.svn-base  pose_tracker.cpp.svn-base  pose_tracker.h.svn-base
examples/record_tsdf/: CMakeLists.txt
examples/robust_planar_pose/: CMakeLists.txt  demo.cpp
resources/.svn/: all-wcprops  entries
(+284 files in other folders)
